# FateInjector

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: build-windows.yml
src/: CMakeLists.txt  FixFilePerms.h  config.cpp  inject.cpp  inject.h  main.cpp  main.rs  pch.h
wxWidgets-3.3.2/samples/: samples_vc18.slnx
wxWidgets-3.3.2/tests/: test_gui_vc18.slnx  test_vc18.slnx
wxWidgets-3.3.2/utils/wxrc/: wxrc_vc18.slnx
