[package]
name = "fate-injector"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Rust-only DLL injector for UWP targets"

[[bin]]
name = "fateInjector"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
